<resources>
    <string name="app_name">B2n</string>
    <string name="et_input">لینک را وارد کنید</string>
    <string name="btn_text">Shorten</string>
    <string name="btn_clear_text">Clear</string>
    <string name="btn_paste_text">Paste</string>
    <string name="btn_copy_text">Copy</string>
    <string name="btn_share_text">Share</string>
    <string name="tv_author_text">Programming by: ICT_Man</string>
    <string name="menu_exit">Exit</string>
    <string name="et_custom">https://b2n.ir/<b>آدرس کوتاه دلخواه</b></string>
</resources>