<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_weight="0.3"
        android:orientation="vertical"
        android:padding="7dp"
        android:layout_margin="6dp"
        android:background="@color/light_blue"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:gravity="center"
            android:layout_weight="0.5"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <EditText
                android:id="@+id/et_input"
                android:hint="@string/et_input"
                android:textSize="18sp"
                android:inputType="text"
                android:background="@color/white"
                android:layout_gravity="center"
                android:padding="10dp"
                android:textColor="@color/black"
                android:layout_weight="0.75"
                android:layout_width="0dp"
                android:layout_height="58dp"/>
            <Button
                android:id="@+id/btn_paste_url"
                android:text="@string/btn_paste_text"
                android:layout_weight="0.25"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:layout_width="0dp"
                android:layout_marginStart="3dp"
                android:layout_height="70dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="0.5"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <Button
                android:id="@+id/btn_short_link"
                android:text="@string/btn_text"
                android:layout_weight="0.3"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:layout_marginTop="10dp"
                android:layout_width="0dp"
                android:layout_height="70dp"/>
            <EditText
                android:id="@+id/et_custom"
                android:hint="@string/et_custom"
                android:textSize="18sp"
                android:padding="10dp"
                android:background="@color/white"
                android:layout_marginStart="3dp"
                android:layout_weight="0.7"
                android:layout_marginTop="10dp"
                android:layout_width="0dp"
                android:layout_height="58dp"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_weight="0.6"
        android:layout_margin="6dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:id="@+id/tv_result"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="1dp"
            tools:text="Result"
            android:background="@drawable/border"
            android:layout_width="match_parent"
            android:layout_height="60dp"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_copy"
                android:text="@string/btn_copy_text"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:layout_width="130dp"
                android:layout_height="70dp"/>
            <Button
                android:id="@+id/btn_share"
                android:text="@string/btn_share_text"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:layout_width="130dp"
                android:layout_height="70dp"/>
            <Button
                android:id="@+id/btn_clear"
                android:text="@string/btn_clear_text"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:layout_width="130dp"
                android:layout_height="70dp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_weight="0.1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:text="@string/tv_author_text"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

</LinearLayout>